Add main class code. Remove obsolete files. Ignore VSCode settings from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ DerivedData/
 # macOS files
 .DS_Store
 
-
+# VSCode settings
+.vscode/
 
 # Based on Android gitignore template: https://github.com/github/gitignore/blob/HEAD/Android.gitignore
 
