--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
+    
+    // ExoPlayer dependencies
+    implementation 'com.google.android.exoplayer2:exoplayer:2.19.1'
+    implementation 'com.google.android.exoplayer2:exoplayer-core:2.19.1'
+    implementation 'com.google.android.exoplayer2:exoplayer-database:2.19.1'
+    
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
